[package]
name = "hyper-server-with-context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.0", features = ["full"] }
futures = "0.3.0"

tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.10"
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
validator = { version = "0.16.0", features = ["derive"] }

regex = "1.6.0"

lazy_static = "1.4"
